--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,5 +1,5 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=/Users/christianhitoshi/fvm/versions/3.16.9
+FLUTTER_ROOT=/Users/christianhitoshi/fvm/versions/stable
 FLUTTER_APPLICATION_PATH=/Users/christianhitoshi/Documents/Github/tasker
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_TARGET=lib/main.dart
